
  [ Samuel Thibault ]
  * debian/rules: Fix suite name.
  * preseed: Add authorized_keys url preseed example, thanks Charles Plessy
    for the patch. Closes: #684629.
  * official-cdrom: Add link to CD FAQ. Thanks Holger Wansing and Richard
    Owlett for the heads-up. Closes: #280348, #309568.
  * Add language-parallel build support.
  * Update figures.

  [ Simon Guinot ]
  * Document support for LaCie NASes. Closes: #686128

  [ Karsten Merker ]
  * Various small removals / updates / amendments in the chapters 2,3 and 5,
    most of them concerning outdated information.
  * Extended the "Devices Requiring Firmware" section.
  * Rewrote large parts of the "Avoid Proprietary or Closed Hardware"
    section.
  * Rewrote the "Hardware Compatibility" section.
  * Amended the "Network Settings" section.
  * Rewrote the "Pre-Partitioning for Multi-Boot Systems" section 
    to bring it up to date with the current d-i features and make it
    easier to read for beginners.
  * Rewrote the "Pre-Installation Hardware and Operating System Setup"
    section to bring it up to date for modern hardware.
  * Amended the "Official Debian GNU/Linux CD/DVD-ROM Sets" section
    (CD1 without network mirror too small for a full GNOME/KDE install).
  * Added a note that for some devices firmware may not be necessary,
    even though a firmware prompt is displayed.
    Closes: #687454 
  * Reworked the "Configuring the Network" section, added information
    regarding IPv6 support.
  * Added a "Choosing a network mirror" section, added information
    regarding IPv6 connectivity of debian mirrors and information about 
    ftp.ipv6.debian.org and http.debian.net.

 -- Samuel Thibault <sthibault@debian.org>  Sun, 26 Aug 2012 16:47:22 +0200

installation-guide (20120826) unstable; urgency=low

  [ Samuel Thibault ]
  * Reference the French translation of the brltty manual in fr.
  * Disable G-I on kfreebsd-*.
  * Document booting d-i from grub2. Closes: #612165.