@@ -19,19 +19,7 @@ installation).
 Move the highlight to the keyboard selection you desire and press
 &enterkey;.  Use the arrow keys to move the highlight &mdash; they are
 in the same place in all national language keyboard layouts, so they
-are independent of the keyboard configuration. An 'extended' keyboard
-is one with <keycap>F1</keycap> through <keycap>F10</keycap> keys
-along the top row.
-
-</para><para arch="powerpc">
-
-There are two keyboard layouts for US keyboards; the qwerty/mac-usb-us
-(Apple USB) layout will place the Alt function on the
-<keycap>Command/Apple</keycap> key (in the keyboard position next to
-the <keycap>space</keycap> key similar to <keycap>Alt</keycap> on
-PC keyboards), while the qwerty/us (Standard) layout will place the
-Alt function on the <keycap>Option</keycap> key (engraved with 'alt'
-on most Mac keyboards). In other respects the two layouts are similar.
+are independent of the keyboard configuration.
 
 </para>
    </sect3>
