@@ -8,6 +8,7 @@ installation-guide (20120827) UNRELEASED; urgency=low
     Owlett for the heads-up. Closes: #280348, #309568.
   * Add language-parallel build support.
   * Update figures.
+  * Remove outdated keyboard configuration bits.
 
   [ Simon Guinot ]
   * Document support for LaCie NASes. Closes: #686128
